--- a/MyPortfolio/style.css
+++ b/MyPortfolio/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(Images/Laptop.png);
+    background-image: url(Images/pexels-mohamed-khaled-397998.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -333,7 +333,7 @@ nav .fas{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(Images/Laptop.png);
+        background-image: url(Images/Lap.png);
     }
     .header-text{
         margin-top: 100%;
