--- a/MyPortfolio/style.css
+++ b/MyPortfolio/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(Images/pexels-mohamed-khaled-397998.jpg);
+    background-image: url(Images/Light-bulb.png);
     background-size: cover;
     background-position: center;
 }
