--- a/MyPortfolio/style.css
+++ b/MyPortfolio/style.css
@@ -14,9 +14,14 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(Images/Light-bulb.png);
-    background-size: cover;
-    background-position: center;
+    /* background-image: url(Images/Light-bulb.png);
+    background-size: contain;
+    background-position: center; */
+    background-image: url(Images/Martin-removebg-preview\ \(1\).png);
+    background-size: 50% 100%; /* This will maintain the image's aspect ratio */
+    background-position: right center; /* This will position the image to the left side */
+    background-repeat: no-repeat; /* Prevent image from repeating */
+    
 }
 .container{
     padding: 10px 10%;
