--- a/Portfolio_1/css/style.css
+++ b/Portfolio_1/css/style.css
@@ -1557,5 +1557,75 @@ ul.disc li {
     display                             : list-item;
     list-style                          : none;
     padding                             : 0 0 0 0.8rem;
-    position                             : relative;
+    position                            : relative;
+}
+
+ul.disc li::before {
+	content								: "";
+	display								: inline-block;
+	width								: 6px;
+	height								: 6px;
+	border-radius						: 50%;
+	background-color					: var(--color-1);
+	position							: absolute;
+	left								: -0.8em;
+	top									: calc(50% - 4px);
+	vertical-align						: middle;
+}
+
+dt {
+	margin								: 0;
+	color								: var(--color-1);
+}
+
+dt strong {
+	color								: var(--color-1);
+}
+
+dd {
+	margin								: 0 0 0 2rem;
+}
+
+/* Definition list line style */
+
+.lining dt,
+.lining dd {
+	display								: inline;
+	margin								: 0;
+}
+
+.lining dt+dt::before,
+.lining dd+dt::before {
+	content								: "\a";
+	white-space							: pre;
+}
+
+.lining dd+dd::before {
+	content								: ", ";
+}
+
+.lining dd::before {
+	content								: ": ";
+	margin-left							: -0.2em;
+}
+
+/* definition list deictionary style */
+
+.dictionary-style dt {
+	display								: inline;
+	counter-reset						: definitions;
+}
+
+.dictionary-style dt+dt::before {
+	content								: ", ";
+	margin-left							: -0.2em;
+}
+
+.dictionary-style dd {
+	display								: block;
+	counter-increment					: definitions;
+}
+
+.dictionary-style dd::before {
+	content								: counter(definitions, decimal) ". ";
 }
