--- a/Second-Portfolio/styles/style.css
+++ b/Second-Portfolio/styles/style.css
@@ -549,6 +549,64 @@ grid-template-columns: repeat(2, 1fr);: This CSS property defines the columns of
   transform: scale(1);
 }
 
+/* ===========================================
+** Services
+=============================================== */
+
+.services {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 3rem;
+}
+
+.services .service {
+  position: relative;
+  background-color: var(--color-grey-5);
+  border-radius: 5px;
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
+  transition: all 0.4s ease-in-out;
+}
+
+.services .service:hover {
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
+  transform: translateY(-10px);
+  transition: all 0.4s ease-in-out;
+}
+
+.services .service img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  filter: grayscale(100%);
+  transition: all 0.4s ease-in-out;
+}
+
+.services .service .service-text {
+  margin-top: -7px;
+  padding: 1.1rem;
+  border-top: 8px solid var(--color-secondary);
+}
+
+.services .service .service-text h4 {
+  font-size: 1.5rem;
+  margin-bottom: 0.7rem;
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+}
+
+.services .service .service-text h4:hover {
+  color: var(--color-secondary);
+}
+
+.services .service .service-text p {
+  color: var(--color-grey-2);
+  line-height: 2rem;
+  padding-bottom: 1rem;
+}
+
 /* ==============================================
 * Independent Components
 =============================================== */
